Add delete reading method, add admin and listreading pages

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -8,7 +8,6 @@
     <h2 class="ui header">
       ${station.stationName}
     </h2>
-    <!-- Displays readings for each station -->
-    #{listreadings station:station/}
+    <a href="/stations/${station.id}"> View </a>
   </section>
 #{/list}
