--- a/app/views/start.html
+++ b/app/views/start.html
@@ -8,6 +8,12 @@
     Weather Top
   </h1>
   <p>
-    Select Dashboard or About
+    Weather top is a Web Application that organizations can use to record Weather patterns and events.
+  </p>
+  <p>
+    Please select the Dashboard to find out more.
+  </p>
+  <p>
+    Select about to know more about Weather Top.
   </p>
 </section>
