--- a/app/views/tags/listreadings.html
+++ b/app/views/tags/listreadings.html
@@ -1,11 +1,12 @@
 <table class="ui celled table">
   <thead>
-  <tr>
-    <th>Code</th>
-    <th>Temp</th>
-    <th>Wind Speed</th>
-    <th>Pressure</th>
-  </tr>
+    <tr>
+      <th>Code</th>
+      <th>Temp</th>
+      <th>Wind Speed</th>
+      <th>Pressure</th>
+      <th></th>
+    </tr>
   </thead>
   <tbody>
   #{list items:_station.readings, as:'reading'}
@@ -21,6 +22,9 @@
     </td>
     <td>
       ${reading.pressure}
+    </td>
+    <td>
+      <a href="/stations/${_station.id}/deleteReading/${reading.id}" class="ui tiny red button">Delete</a>
     </td>
   </tr>
   #{/list}
