--- a/app/views/station.html
+++ b/app/views/station.html
@@ -28,7 +28,7 @@
                             Weather
                           </h3>
                           <p class="description">
-                            ${station.weather}
+                            ${station.readings.code[0]}
                           </p>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                             Temperature
                           </h3>
                           <p class="description">
-                            ${station.temperature}
+                            ${station.readings.temperature[0]}
                           </p>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                             Wind
                           </h3>
                           <p class="description">
-                            ${station.wind}
+                            ${station.readings.windSpeed[0]}
                           </p>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                             Pressure
                           </h3>
                           <p class="description">
-                            ${station.pressure}
+                            ${station.readings.pressure[0]}
                           </p>
                         </div>
                     </div>
