Add add station form functionality and delete station functionality

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -5,7 +5,7 @@
 
 <section>
     <h2 class="ui header">
-        All known Readings in the Database:
+        All readings in the database:
     </h2>
     <table class="ui celled table">
         <thead>
