Add new readings functionality and add new station functionality:

--- a/app/views/station.html
+++ b/app/views/station.html
@@ -98,6 +98,8 @@
             <!-- Displays readings for each station -->
             #{listreadings station:station/}
 
+            <!-- Add reading form -->
+            #{addreading station:station/}
         </tbody>
     </table>
 </section>
