Add fahrenheit conversion method

--- a/app/views/station.html
+++ b/app/views/station.html
@@ -40,9 +40,12 @@
                           <h3 class="ui header" style="padding-top: 2.5rem;">
                             Temperature
                           </h3>
-                          <p class="description">
-                            ${station.readings.temperature[-1]}
-                          </p>
+                            <p class="description">
+                                ${station.readings.temperature[-1]} C
+                            </p>
+                            <p class="description">
+                                ${stationFahrenheitValue} F
+                            </p>
                         </div>
                     </div>
                 </div>
