Add beaufort conversion

--- a/app/views/station.html
+++ b/app/views/station.html
@@ -13,8 +13,8 @@
 
                 <div class="column">
                     <div class="ui fluid inverted card">
-                        <div class="middle aligned content">
-                          <h3 class="ui header" style="padding-top: 2.5rem;">
+                        <div class="middle aligned content" style="max-height: 11rem; min-height:11rem;">
+                          <h3 class="ui header" style="padding-top: 2.5rem";>
                             ${station.stationName}
                           </h3>
                         </div>
@@ -23,8 +23,8 @@
 
                 <div class="column">
                     <div class="ui fluid inverted card">
-                        <div class="middle aligned content">
-                          <h3 class="ui header" style="padding-top: 2.5rem;">
+                        <div class="middle aligned content" style="max-height: 11rem; min-height:11rem;">
+                          <h3 class="ui header" style="padding-top: 2.5rem";>
                             Weather
                           </h3>
                           <p class="description">
@@ -36,8 +36,8 @@
 
                 <div class="column">
                     <div class="ui fluid inverted card">
-                        <div class="middle aligned content">
-                          <h3 class="ui header" style="padding-top: 2.5rem;">
+                        <div class="middle aligned content" style="max-height: 11rem; min-height:11rem;">
+                          <h3 class="ui header" style="padding-top: 2.5rem";>
                             Temperature
                           </h3>
                             <p class="description">
@@ -52,12 +52,12 @@
 
                 <div class="column">
                     <div class="ui fluid inverted card">
-                        <div class="middle aligned content">
-                          <h3 class="ui header" style="padding-top: 2.5rem;">
+                        <div class="middle aligned content" style="max-height: 11rem; min-height:11rem;">
+                          <h3 class="ui header" style="padding-top: 2.5rem";>
                             Wind
                           </h3>
                           <p class="description">
-                            ${station.readings.windSpeed[-1]}
+                            ${stationBeaufortValue} bft
                           </p>
                         </div>
                     </div>
@@ -65,8 +65,8 @@
 
                 <div class="column">
                     <div class="ui fluid inverted card">
-                        <div class="middle aligned content">
-                          <h3 class="ui header" style="padding-top: 2.5rem;">
+                        <div class="middle aligned content" style="max-height: 11rem; min-height:11rem;">
+                          <h3 class="ui header" style="padding-top: 2.5rem";>
                             Pressure
                           </h3>
                           <p class="description">
