Add wind chill calculator

--- a/app/views/station.html
+++ b/app/views/station.html
@@ -59,6 +59,12 @@
                           <p class="description">
                             ${stationBeaufortValue} bft
                           </p>
+                          <p class="description">
+                            ${station.windCompass}
+                          </p>
+                          <p class="description">
+                            ${station.windChill}
+                          </p>
                         </div>
                     </div>
                 </div>
@@ -70,7 +76,7 @@
                             Pressure
                           </h3>
                           <p class="description">
-                            ${station.readings.pressure[-1]} hpa
+                            ${station.pressure} hpa
                           </p>
                         </div>
                     </div>
