--- a/app/views/tags/addreading.html
+++ b/app/views/tags/addreading.html
@@ -10,14 +10,14 @@
     </div>
     <div class="field">
       <label>Wind Speed</label>
-      <input placeholder="0.0" type="number" step=".01" name="windSpeed">
+      <input placeholder="0.0" type="number" step=".02" name="windSpeed">
     </div>
   </div>
   <div class="three fields">
-<!--    <div class="field">-->
-<!--      <label>Wind Direction</label>-->
-<!--      <input placeholder="000deg" type="number" name="windDirection">-->
-<!--    </div>-->
+    <div class="field">
+      <label>Wind Direction</label>
+      <input placeholder="000deg" type="number" step="0.2" name="windDirection">
+    </div>
     <div class="field">
       <label>Pressure</label>
       <input placeholder="000hpa" type="number" name="pressure">
