--- a/app/views/tags/listreadings.html
+++ b/app/views/tags/listreadings.html
@@ -4,6 +4,7 @@
       <th>Code</th>
       <th>Temp</th>
       <th>Wind Speed</th>
+      <th>Wind Direction</th>
       <th>Pressure</th>
       <th></th>
     </tr>
@@ -19,6 +20,9 @@
     </td>
     <td>
       ${reading.windSpeed}
+    </td>
+    <td>
+      ${reading.windDirection}
     </td>
     <td>
       ${reading.pressure}
