Add min & max values for temp, windSpeed and pressure to station

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../public/css/styles.css">
   </head>
   <body>
-    <section class="ui container">
+    <section class="ui container bottom-medium-padding">
       #{doLayout /}
     </section>
   </body>
