refactor station analytics, places min/max values in station variables for convenience

--- a/app/views/station.html
+++ b/app/views/station.html
@@ -53,9 +53,9 @@
                                 <br>
                                 ${stationFahrenheitValue} F
                                 <br>
-                                Max: ${maxTempReading.temperature}
+                                Max: ${station.maxTemperature}
                                 <br>
-                                Min: ${minTempReading.temperature}
+                                Min: ${station.minTemperature}
                             </p>
                         </div>
                     </div>
@@ -75,9 +75,9 @@
                               <br>
                               Feels like ${station.windChill}
                               <br>
-                              Max: ${maxWindReading.windSpeed}
+                              Max: ${station.maxWindSpeed}
                               <br>
-                              Min: ${minWindReading.windSpeed}
+                              Min: ${station.minWindSpeed}
                           </p>
                         </div>
                     </div>
@@ -93,9 +93,9 @@
                           <p class="description">
                             ${station.pressure} hpa
                               <br>
-                              Max: ${maxPressureReading.pressure}
+                              Max: ${station.maxPressure}
                               <br>
-                              Min: ${minPressureReading.pressure}
+                              Min: ${station.minPressure}
                           </p>
                         </div>
                     </div>
