Refactor code, fix add station bug. Update form images

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -28,11 +28,11 @@
         </div>
         <div class="field">
           <label>Latitude</label>
-          <input placeholder="0.0" type="text" placeholder="latitude">
+          <input placeholder="0.0" type="number" step=".01" placeholder="latitude" name="latitude">
         </div>
         <div class="field">
           <label>Longitude</label>
-          <input placeholder="0.0" type="text" placeholder="longitude">
+          <input placeholder="0.0" type="number" step=".01" placeholder="longitude" name="longitude">
         </div>
       </div>
       <button class="ui blue submit button">Add Station</button>
