--- a/app/views/station.html
+++ b/app/views/station.html
@@ -49,7 +49,7 @@
                               <i class="temperature low icon"></i>
                           </h3>
                             <p class="description">
-                                ${station.readings.temperature[-1]} C
+                                ${station.temperature} °C
                                 <br>
                                 ${stationFahrenheitValue} F
                                 <br>
