--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -15,9 +15,9 @@
                 <th>Name</th>
                 <th>Latitude</th>
                 <th>Longitude</th>
-                <th>Weather Code</th>
+                <th>Weather</th>
                 <th>Temperature (°C)</th>
-                <th>Wind Speed (KM/hr)</th>
+                <th>Wind Speed (Kmph)</th>
                 <th>Pressure (hpa)</th>
             </tr>
         </thead>
@@ -37,7 +37,33 @@
                         ${station.longitude}
                     </td>
                     <td>
-                        ${station.readings.code[-1]}
+                        #{if (station.readings.code[-1] == 100) }
+                            Clear
+                        #{/if}
+                        #{elseif (station.readings.code[-1] == 200)}
+                            Partial Clouds
+                        #{/elseif}
+                        #{elseif (station.readings.code[-1] == 300)}
+                            Cloudy
+                        #{/elseif}
+                        #{elseif (station.readings.code[-1] == 400)}
+                            Light Showers
+                        #{/elseif}
+                        #{elseif (station.readings.code[-1] == 500)}
+                            Heavy Showers
+                        #{/elseif}
+                        #{elseif (station.readings.code[-1] == 600)}
+                            Rain
+                        #{/elseif}
+                        #{elseif (station.readings.code[-1] == 700)}
+                            Snow
+                        #{/elseif}
+                        #{elseif (station.readings.code[-1] == 800)}
+                            Thunder
+                        #{/elseif}
+                        #{else}
+                            ${station.readings.code[-1]}
+                        #{/else}
                     </td>
                     <td>
                         ${station.readings.temperature[-1]}
@@ -104,19 +130,19 @@
         </tr>
         </thead>
         <tbody>
-        #{list items:readings, as:'reading'}
+        #{list items:members, as:'member'}
         <tr>
             <td>
-                ${reading.id}
+                ${member.id}
             </td>
             <td>
-                ${reading.code}
+                ${member.firstname}
             </td>
             <td>
-                ${reading.temperature}
+                ${member.lastname}
             </td>
             <td>
-                ${reading.windSpeed}
+                ${member.email}
             </td>
         </tr>
         #{/list}
