--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -3,8 +3,14 @@
 
 #{menu id:"dashboard"/}
 
+  <!--  User first name & last name  -->
+  <header class="ui header">
+    ${member.firstname} ${member.lastname}'s Stations
+  </header>
+
   <section class="ui segment">
 
+    <!--  List of stations  -->
     #{list items:stations, as:'station'}
     <div class="ui stacked segment">
       <h2 class="ui header">
