add delete station function, refactor dashboard.html and added route for new method

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -16,10 +16,12 @@
       <h2 class="ui header">
         ${station.stationName}
       </h2>
+      <!--  explore station  -->
       <a href="/stations/${station.id}" class="ui icon button">
         <i class="icon folder open"></i>
       </a>
-      <a href="/dashboard/deleteStation/${station.id}" class="ui icon button">
+      <!--  delete station  -->
+      <a href="/dashboard/${member.id}/deleteStation/${station.id}" class="ui icon button">
         <i class="icon trash"></i>
       </a>
     </div>
