--- a/app/views/tags/menu.html
+++ b/app/views/tags/menu.html
@@ -1,6 +1,6 @@
 <nav class="ui menu">
   <header class="ui header item">
-    <a href="/"> WeatherTop </a>
+    <a href="/dashboard"> WeatherTop </a>
   </header>
   <div class="ui secondary menu">
     <p class="item">WeatherTop Services Inc.</p>
